✅ Added class to hide items on mobile 🐛Fix mobile nav height 🐛Fix .right aligning left for mobile

--- a/myCSS/myCSS.scss
+++ b/myCSS/myCSS.scss
@@ -1,82 +1,83 @@
 .my-heading {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .my-heading-title {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    flex-direction: column;
 
-    .my-heading-title {
-        display: flex;
-        flex-direction: column;
-
-        h3 {
-            margin-bottom: 5px;
-        }
-        
-        h5 {
-            margin-bottom: 5px;
-            color: gray;
-        }
-
-        span {
-            font-weight: 700;
-            line-height: 1.2;
-            margin-bottom: 15px;
-            font-size: 1.8rem;
-        }
-        
-        a {
-            font-weight: 700;
-            line-height: 1.2;
-            margin-bottom: 15px;
-            font-size: 1.8rem;
-        }
+    h3 {
+      margin-bottom: 5px;
     }
 
-    .right {
-        text-align: end;
+    h5 {
+      margin-bottom: 5px;
+      color: gray;
     }
+
+    span {
+      font-weight: 700;
+      line-height: 1.2;
+      margin-bottom: 15px;
+      font-size: 1.8rem;
+    }
+
+    a {
+      font-weight: 700;
+      line-height: 1.2;
+      margin-bottom: 15px;
+      font-size: 1.8rem;
+    }
+  }
+
+  .right {
+    text-align: end;
+  }
 }
 
 .my-fade-out {
-    animation-name: my-fade-out;
-    animation-duration: 1s;
-    animation-delay: 2s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
+  animation-name: my-fade-out;
+  animation-duration: 1s;
+  animation-delay: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
 .my-fade-in {
-    animation-name: my-fade-in;
-    animation-duration: 1s;
-    animation-delay: 3s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    position: absolute !important;
-    top: 0;
-    width: 100%;
+  animation-name: my-fade-in;
+  animation-duration: 1s;
+  animation-delay: 3s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  opacity: 0;
+  position: absolute !important;
+  top: 0;
+  width: 100%;
 }
 
 .my-header-fix {
-    top: -30px;
+  top: -30px;
+  height: 100vh !important;
 }
 
 @keyframes my-fade-out {
-    25% {
-        transform: translate(0,-2%);
-    }
+  25% {
+    transform: translate(0, -2%);
+  }
 
-    50% {
-        transform: translate(0,2%);
-    }
+  50% {
+    transform: translate(0, 2%);
+  }
 
-    100% {
-        transform: translate(0,4%);
-        opacity: 0;
-    }
+  100% {
+    transform: translate(0, 4%);
+    opacity: 0;
+  }
 }
 
 @keyframes my-fade-in {
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
