--- a/myCSS/myMediaQuieries.scss
+++ b/myCSS/myMediaQuieries.scss
@@ -1,16 +1,40 @@
 /* For desktop: */
-.my-col-1 {width: 8.33%;}
-.my-col-2 {width: 16.66%;}
-.my-col-3 {width: 25%;}
-.my-col-4 {width: 33.33%;}
-.my-col-5 {width: 41.66%;}
-.my-col-6 {width: 50%;}
-.my-col-7 {width: 58.33%;}
-.my-col-8 {width: 66.66%;}
-.my-col-9 {width: 75%;}
-.my-col-10 {width: 83.33%;}
-.my-col-11 {width: 91.66%;}
-.my-col-12 {width: 100%;}
+.my-col-1 {
+  width: 8.33%;
+}
+.my-col-2 {
+  width: 16.66%;
+}
+.my-col-3 {
+  width: 25%;
+}
+.my-col-4 {
+  width: 33.33%;
+}
+.my-col-5 {
+  width: 41.66%;
+}
+.my-col-6 {
+  width: 50%;
+}
+.my-col-7 {
+  width: 58.33%;
+}
+.my-col-8 {
+  width: 66.66%;
+}
+.my-col-9 {
+  width: 75%;
+}
+.my-col-10 {
+  width: 83.33%;
+}
+.my-col-11 {
+  width: 91.66%;
+}
+.my-col-12 {
+  width: 100%;
+}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
@@ -19,6 +43,10 @@
   }
 
   .right {
-    text-align: start;
+    text-align: start !important;
+  }
+
+  .hide-mobile {
+    display: none !important;
   }
 }
